[tool.poetry]
name = "test-poetry-project"
version = "0.1.0"
description = ""
authors = ["Seymur Kafkas <seymurkafkas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

google-cloud-firestore = "^2.16.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
