[tool.poetry]
name = "typesync-integration"
version = "0.1.0"
description = "Integration test suite for typesync's Python generator."
authors = ["Typesync Contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-firestore = "^2.16.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
